--- a/src/Trace/layout.html
+++ b/src/Trace/layout.html
@@ -50,6 +50,7 @@
     <link href="assets/global/plugins/textangular/textAngular.css" rel="stylesheet" type="text/css" />
     <link href="assets/global/plugins/textangular/spectrum.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/global/plugins/textangular/style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
 
   
     <!-- END THEME STYLES -->
@@ -137,8 +138,10 @@
 
     <script src="assets/global/plugins/textangular/textAngular-rangy.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/textangular/textAngular-sanitize.min.js" type="text/javascript"></script>
-    <script src="assets/global/plugins/textangular/textAngular.min.js" type="text/javascript"></script>
+<script src="assets/global/plugins/textangular/textAngular.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
 
+    <script src="assets/global/plugins/baidumap/angular-baidu-map.js" type="text/javascript"></script>
 
 
     <script src="assets/global/plugins/moment.min.js"></script>
