--- a/src/Trace/index.html
+++ b/src/Trace/index.html
@@ -60,7 +60,6 @@ License: You must have a valid license purchased only from themeforest(the above
             <div class="col-md-6 login-container bs-reset mt-login-5-bsfix">
                 <div class="login-content">
                     <h1>铁墩儿管理平台</h1>
-                    <p> ———————————————————————————————————————— </p>
                     <form action="javascript:;" class="login-form" method="post">
                         <div class="alert alert-danger display-hide">
                             <button class="close" data-close="alert"></button>
@@ -68,10 +67,10 @@ License: You must have a valid license purchased only from themeforest(the above
                         </div>
                         <div class="row">
                             <div class="col-xs-6">
-                                <input class="form-control form-control-solid placeholder-no-fix form-group" type="text" autocomplete="off" placeholder="用户名" name="username" id="userName" required />
+                                <input class="form-control form-control-solid placeholder-no-fix form-group" type="text" autocomplete="off" placeholder="用户名"  id="userName" required />
                             </div>
                             <div class="col-xs-6">
-                                <input class="form-control form-control-solid placeholder-no-fix form-group" type="password" autocomplete="off" placeholder="密码" name="password" id="pw" required />
+                                <input class="form-control form-control-solid placeholder-no-fix form-group" type="password" autocomplete="off" placeholder="密码"  id="pw" required />
                             </div>
                         </div>
                         <div class="row">
