--- a/src/Trace/layout.html
+++ b/src/Trace/layout.html
@@ -155,6 +155,7 @@
     <script src="assets/layouts/layout/scripts/layout.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/underscore.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/object-table.js"></script>
+    <script src="assets/global/plugins/smart-table.js"></script>
 
     <script src="assets/global/plugins/abp/abp.js"></script>
     <script src="assets/global/plugins/abp/libs/abp.jquery.js"></script>
