--- a/src/Trace/layout.html
+++ b/src/Trace/layout.html
@@ -31,6 +31,7 @@
     <link href="assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/global/plugins/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/global/plugins/bootstrap-datetimepicker/css/datetimepicker.css" rel="stylesheet" type="text/css" />
     <!-- END GLOBAL MANDATORY STYLES -->
     <!-- BEGIN DYMANICLY LOADED CSS FILES(all plugin and page related styles must be loaded between GLOBAL and THEME css files ) -->
     <link id="ng_load_plugins_before" />
@@ -135,7 +136,12 @@
 <script type="text/javascript" src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
     <!--加载检索信息窗口-->
     <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.4/src/SearchInfoWindow_min.js"></script>
+
     <script src="assets/global/plugins/moment.min.js"></script>
+    <script src="assets/global/plugins/zh-cn.js"></script>
+    <script src="assets/global/plugins/bootstrap-datetimepicker/js/datetimepicker.js"></script>
+    <script src="assets/global/plugins/bootstrap-datetimepicker/js/datetimepicker.templates.js"></script>
+    <script src="assets/global/plugins/bootstrap-datetimepicker/js/dateTimeInput.js"></script>
 
     <script src="assets/global/plugins/ueditor/ueditor.config.js"></script>
     <script src="assets/global/plugins/ueditor/ueditor.all.min.js"></script>
