--- a/src/Trace/layout.html
+++ b/src/Trace/layout.html
@@ -144,7 +144,7 @@
     <script src="assets/global/plugins/bootstrap-datetimepicker/js/dateTimeInput.js"></script>
 
     <script src="assets/global/plugins/ueditor/ueditor.config.js"></script>
-    <script src="assets/global/plugins/ueditor/ueditor.all.min.js"></script>
+    <script src="assets/global/plugins/ueditor/ueditor.all.js"></script>
 <!-- END CORE ANGULARJS PLUGINS -->
     <!-- BEGIN APP LEVEL JQUERY SCRIPTS -->
     <script src="assets/global/scripts/app.min.js" type="text/javascript"></script>
