--- a/src/Trace/layout.html
+++ b/src/Trace/layout.html
@@ -105,8 +105,8 @@
     <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
     <!-- BEGIN CORE JQUERY PLUGINS -->
     <!--[if lt IE 9]>
-    <script src="..assets/global/plugins/respond.min.js"></script>
-    <script src="..assets/global/plugins/excanvas.min.js"></script>
+    <script src="assets/global/plugins/respond.min.js"></script>
+    <script src="assets/global/plugins/excanvas.min.js"></script>
     <![endif]-->
     <script src="assets/global/plugins/jquery.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
@@ -185,5 +185,4 @@
  
 </body>
 <!-- END BODY -->
-
 </html>
