--- a/src/Trace/layout.html
+++ b/src/Trace/layout.html
@@ -8,7 +8,7 @@
 <!-- BEGIN HEAD -->
 
 <head>
-    <style>
+    <!--<style>
     .alert_bar {
     width: 400px;
     position: absolute;
@@ -19,7 +19,7 @@
     text-align: center;
     background-color:burlywood;
 }
-    </style>
+    </style>-->
     <title data-ng-bind="'游迹 | ' + $state.current.data.pageTitle"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
