--- a/src/Trace/index.html
+++ b/src/Trace/index.html
@@ -139,7 +139,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <!-- BEGIN THEME GLOBAL SCRIPTS -->
 <script src="assets/global/scripts/app.min.js" type="text/javascript"></script>
     <script src="http://cdn.bootcss.com/blueimp-md5/1.1.0/js/md5.min.js" type="text/javascript"></script>
-
+    <script src="assets/global/plugins/abp/abp.js" type="text/javascript"></script>
     <!-- END THEME GLOBAL SCRIPTS -->
     <!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script src="assets/pages/scripts/login.js" type="text/javascript"></script>
