--- a/src/Trace/layout.html
+++ b/src/Trace/layout.html
@@ -47,6 +47,7 @@
     <link href="assets/global/plugins/jstree/dist/themes/default/style.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/global/plugins/sweetalert/sweet-alert.css" rel="stylesheet" type="text/css" />
     <link href="assets/global/plugins/toastr/toastr.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/global/plugins/plupload/fileupload.css" rel="stylesheet" type="text/css" />
 
     <link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
    
