--- a/src/Trace/index.html
+++ b/src/Trace/index.html
@@ -1,162 +1,103 @@
-﻿<!DOCTYPE html>
-<!--
-Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.3.7
-Version: 4.7.5
-Author: KeenThemes
-Website: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Dribbble: www.dribbble.com/keenthemes
-Like: www.facebook.com/keenthemes
-Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
--->
-<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
-<!--[if !IE]><!-->
-<html lang="en">
-<!--<![endif]-->
-<!-- BEGIN HEAD -->
+﻿
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8" />
-    <title>铁墩儿  | 首页 </title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="铁墩儿" name="description" />
-    <meta content="猿人科技" name="author" />
-    <!-- BEGIN GLOBAL MANDATORY STYLES -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
-    <link href="assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-    <!-- END GLOBAL MANDATORY STYLES -->
-    <!-- BEGIN PAGE LEVEL PLUGINS -->
-    <link href="assets/global/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/global/plugins/select2/css/select2-bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <!-- END PAGE LEVEL PLUGINS -->
-    <!-- BEGIN THEME GLOBAL STYLES -->
-    <link href="assets/global/css/components-md.css" rel="stylesheet" id="style_components" type="text/css" />
-    <link href="assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
-    <!-- END THEME GLOBAL STYLES -->
-    <!-- BEGIN PAGE LEVEL STYLES -->
-    <link href="assets/pages/css/login-5.min.css" rel="stylesheet" type="text/css" />
-    <!-- END PAGE LEVEL STYLES -->
-    <!-- BEGIN THEME LAYOUT STYLES -->
-    <!-- END THEME LAYOUT STYLES -->
-    <link rel="shortcut icon" href="favicon.ico" />
-</head>
-<!-- END HEAD -->
-<body class=" login">
-    <!-- BEGIN : LOGIN PAGE 5-1 -->
-    <div class="user-login-5">
-        <div class="row bs-reset">
-            <div class="col-md-6 bs-reset mt-login-5-bsfix">
-                <div class="login-bg" style="background-image:url(assets/pages/img/bg1.jpg)">
-                    <img class="login-logo" src="assets/pages/img/logo.png" />
-                </div>
-            </div>
-            <div class="col-md-6 login-container bs-reset mt-login-5-bsfix">
-                <div class="login-content">
-                    <h1>铁墩儿管理平台</h1>
-                    <form action="javascript:;" class="login-form" method="post">
-                        <div class="alert alert-danger display-hide">
-                            <button class="close" data-close="alert"></button>
-                            <span>请输入用户名和密码. </span>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <input class="form-control form-control-solid placeholder-no-fix form-group" type="text" autocomplete="off" placeholder="用户名"  id="userName" required />
-                            </div>
-                            <div class="col-xs-6">
-                                <input class="form-control form-control-solid placeholder-no-fix form-group" type="password" autocomplete="off" placeholder="密码"  id="pw" required />
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <div class="rem-password">
-                                    <label class="rememberme mt-checkbox mt-checkbox-outline">
-                                        <input type="checkbox" name="remember" value="1" /> 记住密码
-                                        <span></span>
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="col-sm-8 text-right">
-                                <div class="forgot-password">
-                                    <a href="javascript:;" id="forget-password" class="forget-password">忘记密码?</a>
-                                </div>
-                                <button id="btn" class="btn green" type="button">Sign In</button>
-                            </div>
-                        </div>
-                    </form>
-                    <!-- BEGIN FORGOT PASSWORD FORM -->
-                    <form class="forget-form" action="javascript:;" method="post">
-                        <h3 class="font-green">忘记密码 ?</h3>
-                        <p> 请输入您的邮箱地址以便于重置密码 </p>
-                        <div class="form-group">
-                            <input class="form-control placeholder-no-fix form-group" type="text" 
-                                   autocomplete="off" placeholder="邮箱地址" name="email" />
-                        </div>
-                        <div class="form-actions">
-                            <button type="button" id="back-btn" class="btn green btn-outline">返回</button>
-                            <button type="submit" class="btn btn-success uppercase pull-right">提交</button>
-                        </div>
-                    </form>
-                    <!-- END FORGOT PASSWORD FORM -->
-                </div>
-                <div class="login-footer">
-                    <div class="row bs-reset">
-                        <div class="col-xs-5 bs-reset">
-                    </div>
-                    <div class="col-xs-7 bs-reset">
-                        <div class="login-copyright text-right">
-                            <p>Copyright &copy; 猿人科技 2017</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- END : LOGIN PAGE 5-1 -->
-<!-- BEGIN CORE PLUGINS -->
-<script type="text/javascript" src="assets/global/plugins/jquery.min.js"></script>
-<script type="text/javascript" src="assets/global/plugins/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/global/plugins/jquery.cookie.js"></script>
- 
-
-<script src="assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-    <script src="assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
-    <script src="assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
-    <!-- END CORE PLUGINS -->
-    <!-- BEGIN PAGE LEVEL PLUGINS -->
+    <title>eFan服务平台</title>
+    <link rel="stylesheet" href="assets/global/plugins/bootstrap/css/bootstrap.min.css" />
+    <script type="text/javascript" src="assets/global/plugins/jquery.min.js"></script>
+    <script language="javascript" src="assets/global/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/global/plugins/jquery.cookie.js"></script>
     <script src="assets/global/plugins/jquery-validation/js/jquery.validate.min.js"></script>
     <script src="assets/global/plugins/jquery-validation/js/additional-methods.min.js"></script>
-    <script src="assets/global/plugins/select2/js/select2.full.min.js" type="text/javascript"></script>
-    <script src="assets/global/plugins/backstretch/jquery.backstretch.min.js" type="text/javascript"></script>
-    <!-- END PAGE LEVEL PLUGINS -->
-    <!-- BEGIN THEME GLOBAL SCRIPTS -->
-<script src="assets/global/scripts/app.min.js" type="text/javascript"></script>
     <script src="http://cdn.bootcss.com/blueimp-md5/1.1.0/js/md5.min.js" type="text/javascript"></script>
-    <script src="assets/global/plugins/abp/abp.js" type="text/javascript"></script>
-    <!-- END THEME GLOBAL SCRIPTS -->
-    <!-- BEGIN PAGE LEVEL SCRIPTS -->
-<script src="assets/pages/scripts/login.js" type="text/javascript"></script>
-    
-  
-  
-<!-- END PAGE LEVEL SCRIPTS -->
-    <!-- BEGIN THEME LAYOUT SCRIPTS -->
-    <!-- END THEME LAYOUT SCRIPTS -->
-    <script>
-            $(document).ready(function()
-            {
-                $('#clickmewow').click(function()
-                {
-                    $('#radio1003').attr('checked', 'checked');
-                });
-            })
-    </script>
+    <style>
+        h1 {
+            text-align: center;
+            font-family: Microsoft YaHei;
+        }
+
+            h1 img {
+                width: 120px;
+            }
+
+        .form-horizontal {
+            padding: 80px;
+            /*width: 60%;*/
+            background-color: #efefef;
+            opacity: 0.8;
+        }
+
+        #ipage {
+            width: 100%;
+            height: 1000px;
+            text-align: center;
+            background: url(assets/global/img/social/bj.jpg) top center no-repeat;
+            background-size: 100% 100%;
+        }
+
+        #fbox {
+            margin-top: 100px;
+            width: 700px;
+            display: inline-block;
+            box-shadow: 1px 2px 1px #d9d9d9;
+        }
+
+        .nav-tabs {
+            margin: 20px;
+        }
+
+        a {
+            color: #999999;
+            text-decoration: none;
+        }
+
+        #qrcodePanel {
+            display: none;
+        }
+    </style>
+</head>
+
+<body>
+    <H1><img src="assets/global/img/social/efanlogo.png" />自助零售服务平台</H1>
+    <div id="ipage">
+        <div id="fbox">
+            <form class="form-horizontal" role="form" method="post">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a id='pwTab'>密码登录</a></li>
+                </ul>
+                <div id="show" style="display:none" class="alert alert-danger display-hide">
+                    <button class="close" data-close="alert"></button>
+                    <span id="text"> 请输入用户名或密码. </span>
+                </div>
+                <div id='pwPanel'>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">用户名</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="userName" placeholder="">
+                        </div>
+                        <label class="col-sm-2" id="nameWarnning"></label>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">密码</label>
+                        <div class="col-sm-8">
+                            <input type="password" class="form-control" id="pw">
+                        </div>
+                        <label class="col-sm-2" id="pwWarnning"></label>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-8 control-label"></label>
+                        <div class="col-sm-2">
+                            <button type="button" id="loginSubmit" class="btn btn-primary">登录</button>
+
+                        </div>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+    </div>
+    <script src="assets/pages/scripts/login.js"></script>
 </body>
 </html>
