--- a/src/Trace/layout.html
+++ b/src/Trace/layout.html
@@ -137,8 +137,11 @@
 <script type="text/javascript" src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
     <!--加载检索信息窗口-->
     <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.4/src/SearchInfoWindow_min.js"></script>
+    
+    <script src="assets/global/plugins/angular-baidu-map.js"></script>
+    
 
-    <script src="assets/global/plugins/moment.min.js"></script>
+<script src="assets/global/plugins/moment.min.js"></script>
     <script src="assets/global/plugins/zh-cn.js"></script>
     <script src="assets/global/plugins/bootstrap-datetimepicker/js/datetimepicker.js"></script>
     <script src="assets/global/plugins/bootstrap-datetimepicker/js/datetimepicker.templates.js"></script>
